# pkm-engine

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  PROGRESS.md  README.md  package-lock.json  package.json  pyproject.toml  vitest.config.query.ts  vitest.config.ts  worker-clip.js  worker-query.js  wrangler-query.test.toml  wrangler-query.toml  wrangler.toml
.github/workflows/: digest.yml  ingest.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
docs/: GUARDRAILS.md  KICKOFF.md  LEGACY_RETIREMENT_PLAN.md  OCR_SPEC.md  PHASE4_VERIFICATION.md  PHASE5_VERIFICATION.md  PHASE8_VERIFICATION.md  PKM_Build_Plan_for_Claude_Code.md  PKM_Cloud_Architecture.md  PKM_System_Technical_Specification.md  PKM_TECHNICAL_SPECIFICATION.md  PKM_Technical_Build_Specification.md  RESUME_HERE.md  SECRETS.md  SMOKE_TEST_SYNTHESIZE.md  research-synthesis.md
migrations/sqlite/: 001_init.sql  003_dashboard_counters.sql  004_agent_runs_output.sql  005_concept_synthesis.sql
pkm/: batch.py  cli.py  config.py  dashboard.py  lint.py
pkm/agents/: __init__.py  base.py  (+5 more)
scripts/: compare_models.py
test/: worker-clip.spec.ts  worker-query.spec.ts
tests/: conftest.py  test_agents.py  test_backfill_embeds.py  test_base_agent.py  test_batch_ingest.py  test_dashboard.py  test_digest.py  test_embed.py  test_gemini_client.py  test_idempotency.py  test_ingest_e2e.py  test_ingest_notes.py  test_lint.py  test_llm_client.py  test_ocr.py  test_resilient_connection.py  test_resolver.py  test_synthesis.py  test_synthesize.py  test_truncation_retry.py  test_vault.py
(+83 files in other folders)
